@@ -22,6 +22,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2715417 [interface] Fixed truncation of enum/set values containing parenthesis
   thanks to Marco Moreno - mmoreno
 + [lang] Spanish update, thanks to Daniel Hinostroza
+- bug #2724844 Add Fields: Add index is missing quotes
+  thanks to Luke Armstrong
 
 3.1.3.1 (2009-03-24)
 - [security] HTTP Response Splitting and file inclusion vulnerabilities 
